argument and command substitution bug fix